--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
 				</p>
 
-				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, and cognition.
+				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in commonsense reasoning for vision, language, knowledge, and cognition.
 				</p>	
 
 				<!-- Icons -->
