--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
 				</p>
 
-				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in commonsense reasoning for vision, language, knowledge, and cognition.
+				<p>I am interested in <strong>computer vision</strong> and <strong>natural language understanding</strong>, especially in commonsense reasoning for vision, language, knowledge, and cognition.
 				</p>	
 
 				<!-- Icons -->
@@ -120,6 +120,15 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
+				<strong>[05/2021]&nbsp; <font color="red">New!</font>
+				</strong> One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b>.
+
+			</li>
+			<li>
+				<strong>[05/2021]&nbsp; <font color="red">New!</font>
+				</strong> One paper on social relation inference in dialogues is is accepted to  <b>ACL 2021</b>.
+			</li>
+			<li>
 				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
 			</li>
 			<li>
@@ -139,6 +148,36 @@
 	<div class="container">
 		<h3 id="Publications" style="">Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- ACL21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/acl21_gps.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
+				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang and Song-Chun Zhu</a><br>
+				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
+				<a href="papers/acl21_gps.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Project]</small></a>
+				<a href="" target="_blank"> <small>[Code]</small></a>
+				<a href="bibs/acl21_gps.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
+
+		<!-- ACL21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/acl21_soc.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">SocAoG: Incremental Graph Parsing for Social Relation Inference in Dialogues</font></b><br>
+				<a>Liang Qiu, Yuan Liang, Yizhou Zhao, <b>Pan Lu</b>, Baolin Peng, Zhou Yu, Ying Nian Wu, Song-Chun Zhu</a><br>
+				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
+				<a href="papers/acl21_soc.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="bibs/acl21_soc.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
 
 		<!-- Mind -->
 		<div class="row">
@@ -362,10 +401,16 @@
 
 	<!-- Service -->
 	<div class="container">
-		<h3 id="Service" style="">Professional Service</h3>
-		<hr><ul>
-			<li> <strong>Program Committee Member</strong>: ICLR-21, CVPR-21, NeurIPS-20, AAAI, SIGKDD, ICDM, PAKDD</li>
-			<li> <strong>Journal Reviewer</strong>: 
+		<h3 id="Service" style="">Professional Service</h3><hr>
+		<h4 id="Service" style="">Program Committee Member</h3>
+		<ul>
+			<li> <strong>2021</strong>: ICCV, ICLR, CVPR</li>
+			<li> <strong>2020</strong>: NeurIPS </li>
+			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
+		</ul>
+		<h4 id="Service" style="">Journal Reviewer</h3>
+		<ul>
+			<li> 
 				<a href="http://www.ieee-jas.org/" target="_blank">IEEE/CAA JAS</a>, 
 				<a href="http://www.aas.net.cn/CN/volumn/current.shtml" target="_blank">AAS</a>
 			</li>
@@ -414,5 +459,7 @@
 
 </body>
 </html>
+
+
 
 
