--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
-				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang and Song-Chun Zhu</a><br>
+				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
 				<a href="papers/acl21_gps.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Project]</small></a>
