--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
 			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
 			<li><strong>National Scholarship</strong> (<em>for top 2% students</em>), 2014</li>
 			<li><strong>First Prize of America Mathematical Contest In Modeling (MCM)</strong>, 2014</li>
+			<li><strong>President Teli Xu’s Special Fellowship</strong> (<em>the highest honor for top 2 undergraduates</em>), 2013</li>
 		</ul>
 	</div><br>
 
@@ -404,7 +405,7 @@
 		<h3 id="Service" style="">Professional Service</h3><hr>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
-			<li> <strong>2021</strong>: ICCV, ICLR, CVPR</li>
+			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
 			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
 		</ul>
