--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
-				</strong> One paper on social relation inference in dialogues is is accepted to  <b>ACL 2021</b>.
+				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b>.
 			</li>
 			<li>
 				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
