--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
 				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
 				<a href="https://arxiv.org/pdf/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]</small></a>
-				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]</small></a>
+				<a href="papers/acl21_intergps.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/acl21_intergps_supp.pdf" target="_blank"> <small>[Supplementary]&nbsp;</small></a>
+				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/acl21_gps.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
