--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
 				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
-				<a href="https://arxiv.org/pdf/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/acl21_intergps.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="papers/acl21_intergps_supp.pdf" target="_blank"> <small>[Supplementary]&nbsp;</small></a>
 				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
