update acl paper

--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
 					<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 					<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
 				</div>
-
-
-
 			</div>
 		</div>
 	</div><br><br>
@@ -122,7 +119,6 @@
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
 				</strong> One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b>.
-
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
@@ -156,7 +152,7 @@
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
-				<a><b>Pan Lu</b>, Ran Gong, Shibiao Jiang, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
+				<a><b>Pan Lu</b><sup>*</sup>, Ran Gong<sup>*</sup>, Shibiao Jiang<sup>*</sup>, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/acl21_intergps.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
