update acl oral

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 		<hr><ul>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
-				</strong> One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b>.
+				</strong> One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
-				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b>.
+				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
 				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
@@ -159,6 +159,7 @@
 				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/acl21_gps.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
 
@@ -173,6 +174,7 @@
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
 				<a href="papers/acl21_soc.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/acl21_soc.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
 
@@ -457,7 +459,4 @@
 
 </body>
 </html>
-
-
-
 
