--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
-				<strong>[05/2021]&nbsp; <font color="red">New!</font>
-				</strong> One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
+				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
+				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. Welcome!
+			</li>
+			<li>
+				<strong>[05/2021]&nbsp; <font color="red">New!</font> </strong> 
+				One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font>
