--- a/index.html
+++ b/index.html
@@ -406,6 +406,12 @@
 	<!-- Service -->
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3><hr>
+		<h4 id="Service" style="">Co-Organizer</h3>
+			<ul>
+				<li> <strong>NeurIPS 2021 Workshop</strong>: 
+					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a> 
+				</li>
+			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
