--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
 		<hr><ul>
 			<li>
 				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
-				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. Welcome!
+				I am co-organizing the <b><a href="https://mathai4ed.github.io/" target="_blank">MATHAI4ED</a></b> Workshop at <b>NeurIPS 2021</b>. Welcome to participate!
+			</li>
+			<li>
+				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
+				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. 
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font> </strong> 
@@ -129,10 +133,10 @@
 				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
-				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
+				<strong>[03/2021]</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
 			</li>
 			<li>
-				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
+				<strong>[11/2019]</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
 			<li>
 				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI 2019</b> as an <b><font color="red">Oral Presentation</font></b>.
