--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
 				<a><b>Pan Lu</b><sup>*</sup>, Ran Gong<sup>*</sup>, Shibiao Jiang<sup>*</sup>, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://aclanthology.org/2021.acl-long.528/" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/acl21_intergps.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]&nbsp;</small></a>
@@ -418,6 +418,7 @@
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
+			<li> <strong>2022</strong>: AAAI, ICLR</li>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
 			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
