--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a second-year PhD student in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
+				<p>I am a third-year PhD candicate in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
 				</p>
 
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
@@ -116,6 +116,10 @@
 	<div class="container">
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
+			<li>
+				<strong>[10/2021]&nbsp; <font color="red">New!</font></strong> 
+				One paper on visual question answering for icon images (<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>) is accepted to <b>NeurIPS 2021</b></font></b>. 
+			</li>
 			<li>
 				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
 				I am co-organizing the <b><a href="https://mathai4ed.github.io/" target="_blank">MATHAI4ED</a></b> Workshop at <b>NeurIPS 2021</b>. Welcome to participate!
@@ -150,8 +154,26 @@
 
 	<!-- Publications -->
 	<div class="container">
-		<h3 id="Publications" style="">Publications</h3><hr>
+		<h3 id="Publications" style="">Selected Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- NeurIPS21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/neurips21_iconqa.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">IconQA: A New Benchmark for Abstract Diagram Understanding and Visual Language Reasoning</font></b><br>
+				<a><b>Pan Lu</b>, Liang Qiu, Jiaqi Chen, Tony Xia, Yizhou Zhao, Wei Zhang, Zhou Yu, Xiaodan Liang, Song-Chun Zhu</a><br>
+				<b><a href="https://nips.cc/Conferences/2021" target="_blank">NeurIPS 2021&nbsp;</a></b>
+				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://iconqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/IconQA" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/neurips21_iconqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Datasets and Benchmarks Track</b></font>
+			</div>
+		</div><hr>
 
 		<!-- ACL21 -->
 		<div class="row">
@@ -348,8 +370,13 @@
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
+				<strong>Research Intern</strong>, <em>Document Intelligence Group</em>, <em>Adobe Research</em>, 2021.6 - 2021.9 <br>
+				Advisors: Dr. <a href="https://research.adobe.com/person/jiuxiang-gu/" target="_blank">Jiuxiang Gu</a>, 
+							Dr. <a href="https://research.adobe.com/person/tong-sun/" target="_blank">Tong Sun</a>
+			</li>
+			<li>
 				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face Plus</em>, 2019.3 - 2019.7 <br>
-				Advisors: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
+				Advisor: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Natural Language Computing Group</em>, <em> Microsoft Research Asia</em>, 2017.11 - 2018.5<br>
@@ -361,11 +388,11 @@
 			</li>
 			<li>
 				<strong>Research Assistant</strong>, <em>Data Mining Group</em>, <em>Tsinghua University</em>, 2014.11 - 2018.7 <br>
-				Advisors: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
+				Advisor: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Institute of Automation</em>, <em>Chinese Academy of Sciences</em>, 2014.7 - 2014.9 <br>
-				Advisors: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
+				Advisor: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
 			</li>
 		</ul>
 	</div><br>
@@ -375,6 +402,10 @@
 	<div class="container">
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr><ul>
+			<li>
+				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2021.9 - 2021.12 <br>
+				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">Operating System Principles</a>, Fall 2021
+			</li>
 			<li>
 				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
 				Data Mining: Theory and Algorithms
