--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 				<b><font color="black">IconQA: A New Benchmark for Abstract Diagram Understanding and Visual Language Reasoning</font></b><br>
 				<a><b>Pan Lu</b>, Liang Qiu, Jiaqi Chen, Tony Xia, Yizhou Zhao, Wei Zhang, Zhou Yu, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://nips.cc/Conferences/2021" target="_blank">NeurIPS 2021&nbsp;</a></b>
-				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/neurips21_iconqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/neurips21_iconqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://iconqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/IconQA" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/neurips21_iconqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
@@ -403,6 +403,10 @@
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr><ul>
 			<li>
+				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.1 - 2022.3 <br>
+				TBD, Winter 2022
+			</li>
+			<li>
 				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2021.9 - 2021.12 <br>
 				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">Operating System Principles</a>, Fall 2021
 			</li>
@@ -441,7 +445,7 @@
 	<!-- Service -->
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3><hr>
-		<h4 id="Service" style="">Co-Organizer</h3>
+		<h4 id="Service" style="">Organizer</h3>
 			<ul>
 				<li> <strong>NeurIPS 2021 Workshop</strong>: 
 					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a> 
@@ -449,7 +453,7 @@
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
-			<li> <strong>2022</strong>: AAAI, ICLR</li>
+			<li> <strong>2022</strong>: CVPR, AAAI, ICLR</li>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
 			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
