--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		</div><hr>
 
 		<!-- PAKDD19 -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="" alt="">
 			</div>
@@ -319,7 +319,7 @@
 				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/pakdd2019_hybrid.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
-		</div><hr>
+		</div><hr> -->
 
 		<!-- ICDE19  -->
 		<div class="row">
