--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a second-year PhD student in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
+				<p>I am a third-year PhD candicate in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
 				</p>
 
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
@@ -117,8 +117,20 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
+				<strong>[12/2021]&nbsp; <font color="red">New!</font></strong> 
+				Two papers are accepted to <b>AAAI 2022</b></font></b>. 
+			</li>
+			<li>
+				<strong>[10/2021]&nbsp; <font color="red">New!</font></strong> 
+				One paper on visual question answering for icon images (<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>) is accepted to <b>NeurIPS 2021</b></font></b>. 
+			</li>
+			<li>
 				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
-				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. Welcome!
+				I am co-organizing the <b><a href="https://mathai4ed.github.io/" target="_blank">MATHAI4ED</a></b> Workshop at <b>NeurIPS 2021</b>. Welcome to participate!
+			</li>
+			<li>
+				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
+				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. 
 			</li>
 			<li>
 				<strong>[05/2021]&nbsp; <font color="red">New!</font> </strong> 
@@ -129,10 +141,10 @@
 				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
-				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
+				<strong>[03/2021]</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
 			</li>
 			<li>
-				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
+				<strong>[11/2019]</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
 			<li>
 				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI 2019</b> as an <b><font color="red">Oral Presentation</font></b>.
@@ -146,8 +158,62 @@
 
 	<!-- Publications -->
 	<div class="container">
-		<h3 id="Publications" style="">Publications</h3><hr>
+		<h3 id="Publications" style="">Selected Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		AAAI22
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/aaai22_tangram.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Learning from the Tangram to Solve Mini Visual Tasks</font></b><br>
+				<a>Yizhou Zhao, Liang Qiu, <b>Pan Lu</b>, Feng Shi, Tian Han, Song-Chun Zhu</a><br>
+				<b><a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022&nbsp;</a></b>
+				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/aaai22_tangram.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Oral Presentation</b></font>
+			</div>
+		</div><hr>
+
+		<!-- AAAI22 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/aaai22_valuenet.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">ValueNet: A New Dataset for Human Value Driven Dialogue System</font></b><br>
+				<a>Liang Qiu, Yizhou Zhao, Jinchao Li, <b>Pan Lu</b>, Baolin Peng, Jianfeng Gao, Song-Chun Zhu</a><br>
+				<b><a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022&nbsp;</a></b>
+				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://valuenetofficial.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/aaai22_valuenet.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Oral Presentation</b></font>
+			</div>
+		</div><hr>
+
+		<!-- NeurIPS21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/neurips21_iconqa.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">IconQA: A New Benchmark for Abstract Diagram Understanding and Visual Language Reasoning</font></b><br>
+				<a><b>Pan Lu</b>, Liang Qiu, Jiaqi Chen, Tony Xia, Yizhou Zhao, Wei Zhang, Zhou Yu, Xiaodan Liang, Song-Chun Zhu</a><br>
+				<b><a href="https://nips.cc/Conferences/2021" target="_blank">NeurIPS 2021&nbsp;</a></b>
+				<a href="papers/neurips21_iconqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/neurips21_iconqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://iconqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/IconQA" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/neurips21_iconqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Datasets and Benchmarks Track</b></font>
+			</div>
+		</div><hr>
 
 		<!-- ACL21 -->
 		<div class="row">
@@ -158,7 +224,7 @@
 				<b><font color="black">Inter-GPS: Interpretable Geometry Problem Solving with Formal Language and Symbolic Reasoning</font></b><br>
 				<a><b>Pan Lu</b><sup>*</sup>, Ran Gong<sup>*</sup>, Shibiao Jiang<sup>*</sup>, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
 				<b><a href="https://2021.aclweb.org/" target="_blank">ACL 2021&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2105.04165" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://aclanthology.org/2021.acl-long.528/" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/acl21_intergps.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]&nbsp;</small></a>
@@ -242,7 +308,7 @@
 		</div><hr>
 
 		<!-- PAKDD19 -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="" alt="">
 			</div>
@@ -253,7 +319,7 @@
 				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/pakdd2019_hybrid.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
-		</div><hr>
+		</div><hr> -->
 
 		<!-- ICDE19  -->
 		<div class="row">
@@ -344,8 +410,13 @@
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
+				<strong>Research Intern</strong>, <em>Document Intelligence Group</em>, <em>Adobe Research</em>, 2021.6 - 2021.9 <br>
+				Advisors: Dr. <a href="https://research.adobe.com/person/jiuxiang-gu/" target="_blank">Jiuxiang Gu</a>, 
+							Dr. <a href="https://research.adobe.com/person/tong-sun/" target="_blank">Tong Sun</a>
+			</li>
+			<li>
 				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face Plus</em>, 2019.3 - 2019.7 <br>
-				Advisors: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
+				Advisor: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Natural Language Computing Group</em>, <em> Microsoft Research Asia</em>, 2017.11 - 2018.5<br>
@@ -357,11 +428,11 @@
 			</li>
 			<li>
 				<strong>Research Assistant</strong>, <em>Data Mining Group</em>, <em>Tsinghua University</em>, 2014.11 - 2018.7 <br>
-				Advisors: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
+				Advisor: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Institute of Automation</em>, <em>Chinese Academy of Sciences</em>, 2014.7 - 2014.9 <br>
-				Advisors: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
+				Advisor: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
 			</li>
 		</ul>
 	</div><br>
@@ -371,6 +442,14 @@
 	<div class="container">
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr><ul>
+			<li>
+				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.1 - 2022.3 <br>
+				TBD, Winter 2022
+			</li>
+			<li>
+				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2021.9 - 2021.12 <br>
+				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">Operating System Principles</a>, Fall 2021
+			</li>
 			<li>
 				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
 				Data Mining: Theory and Algorithms
@@ -406,7 +485,7 @@
 	<!-- Service -->
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3><hr>
-		<h4 id="Service" style="">Co-Organizer</h3>
+		<h4 id="Service" style="">Organizer</h3>
 			<ul>
 				<li> <strong>NeurIPS 2021 Workshop</strong>: 
 					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a> 
@@ -414,6 +493,7 @@
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
+			<li> <strong>2022</strong>: CVPR, AAAI, ICLR</li>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
 			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
@@ -469,3 +549,4 @@
 
 </body>
 </html>
+
