--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		<h3 id="Publications" style="">Selected Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
-		AAAI22
+		<!-- AAAI22 -->
 		<div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/aaai22_tangram.png" style="" alt="">
