--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
 				<b><font color="black">Learning from the Tangram to Solve Mini Visual Tasks</font></b><br>
 				<a>Yizhou Zhao, Liang Qiu, <b>Pan Lu</b>, Feng Shi, Tian Han, Song-Chun Zhu</a><br>
 				<b><a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022&nbsp;</a></b>
-				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2112.06113" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2112.06113.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<!-- <a href="" target="_blank"> <small>[Project]&nbsp;</small></a> -->
-				<a href="" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://github.com/yizhouzhao/Tangram" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/aaai22_tangram.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
@@ -188,8 +188,8 @@
 				<b><font color="black">ValueNet: A New Dataset for Human Value Driven Dialogue System</font></b><br>
 				<a>Liang Qiu, Yizhou Zhao, Jinchao Li, <b>Pan Lu</b>, Baolin Peng, Jianfeng Gao, Song-Chun Zhu</a><br>
 				<b><a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022&nbsp;</a></b>
-				<a href="" target="https://arxiv.org/abs/2112.06346"> <small>[Paper]&nbsp;</small></a>
-				<a href="" target="papers/aaai22_valuenet.pdf"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2112.06346" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/aaai22_valuenet.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://valuenetofficial.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/aaai22_valuenet.txt" target="_blank"> <small>[BibTex]</small></a><br>
