--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
 		<hr><ul>
 			<li>
 				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.1 - 2022.3 <br>
-				TBD, Winter 2022
+				ECE C247: Neural Networks and Deep Learning, Winter 2022
 			</li>
 			<li>
 				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2021.9 - 2021.12 <br>
-				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">Operating System Principles</a>, Fall 2021
+				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">CS 111: Operating System Principles</a>, Fall 2021
 			</li>
 			<li>
 				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
