--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
 				</p>
 
-				<p>I am interested in <strong>computer vision</strong> and <strong>natural language understanding</strong>, especially in commonsense reasoning for vision, language, knowledge, and cognition.
+				<p>I am interested in <strong>multimodal learning</strong> and <strong>commonsense reasoning</strong>, 
+					especially in commonsense knowledge acquisition and reasoning,
+					mathematical reasoning in education scenarios,
+					multimodal learning in vision-and-language applications.
 				</p>	
 
 				<!-- Icons -->
@@ -397,6 +400,10 @@
 				<strong>Tsinghua University</strong>, 2015.8 - 2018.7<br>
 				M.Eng. in Computer Science
 			</li>
+			<!-- <li>
+				<strong>Beijing Institute of Technology</strong>, 2011.8 - 2015.7<br>
+				B.S. in Electrical Engineering
+			</li> -->
 		</ul>
 	</div><br>
 
@@ -443,6 +450,10 @@
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr><ul>
 			<li>
+				<strong>Guest Lecturer</strong>, <em>UCLA</em>, 2022.2 <br>
+				ECE C247: Neural Networks and Deep Learning, Winter 2022
+			</li>
+			<li>
 				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.1 - 2022.3 <br>
 				ECE C247: Neural Networks and Deep Learning, Winter 2022
 			</li>
@@ -451,7 +462,7 @@
 				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">CS 111: Operating System Principles</a>, Fall 2021
 			</li>
 			<li>
-				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
+				<strong>Guest Lecturer</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
 				Data Mining: Theory and Algorithms
 			</li>
 			<li>
@@ -489,6 +500,9 @@
 			<ul>
 				<li> <strong>NeurIPS 2021 Workshop</strong>: 
 					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a> 
+				</li>
+				<li> <strong>Chair</strong>,
+					IEEE Student Branch at Tsinghua University, 2015.10 - 2016.10
 				</li>
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
@@ -532,7 +546,7 @@
 		</center> -->
         <div class="row">
             <div class="col-md-9">
-                <p align="left">&copy; Pan Lu 2021</p>
+                <p align="left">&copy; Pan Lu 2022</p>
             </div>
             <div class="col-md-3">
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kM7hb210psDEOVXSuHck6GmcfISVxTpZ0I6EmgBHZMQ&cl=ffffff&w=a"></script>
