--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
+				<strong>[02/2022]&nbsp; <font color="red">New!</font></strong> 
+				Data and code for NeurIPS 2021 
+				<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>
+				is released now!
+			</li>
+			<li>
 				<strong>[12/2021]&nbsp; <font color="red">New!</font></strong> 
 				Two papers are accepted to <b>AAAI 2022</b></font></b>. 
 			</li>
@@ -193,10 +199,10 @@
 				<b><a href="https://aaai.org/Conferences/AAAI-22/" target="_blank">AAAI 2022&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2112.06346" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/aaai22_valuenet.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://valuenetofficial.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://liang-qiu.github.io/ValueNet/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Code]&nbsp;</small></a> -->
 				<a href="bibs/aaai22_valuenet.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<font color="firebrick"><b>Oral Presentation</b></font>
+				<!-- <font color="firebrick"><b>Oral Presentation</b></font> -->
 			</div>
 		</div><hr>
 
